Created application, data-schema.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+HELP.md
+target/
+*.bak
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
 # Compiled class file
 *.class
 
