JPA batching, uniqueConstraints for likes and views, formulas for posts. LikeRepository, PostRepository, ViewRepository, PostService, PostRestController implementation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 # = Initialize the database using data.sql script
 # ==============================================================
 spring.datasource.initialization-mode=always
+# ==============================================================
+# = Enabling batching for inserts and updates
+# ==============================================================
+spring.jpa.properties.hibernate.jdbc.batch_size=64
+spring.jpa.properties.hibernate.order_inserts=true
