Contacts controller, Email service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.datasource.initialization-mode=always
 # ==============================================================
 spring.jpa.properties.hibernate.jdbc.batch_size=64
 spring.jpa.properties.hibernate.order_inserts=true
+# ==============================================================
+# = Maximum file upload size
+# ==============================================================
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
