--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,10 @@ spring.datasource.validationQuery=SELECT 1
 # ==============================================================
 # = Show or not log for each sql query
 # ==============================================================
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+# Enable log sql queries and bind values
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ==============================================================
 # = Hibernate ddl auto (create, create-drop, update)
 # ==============================================================
