--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,5 +38,5 @@ spring.jpa.properties.hibernate.order_inserts=true
 # ==============================================================
 # = Maximum file upload size
 # ==============================================================
-spring.servlet.multipart.max-file-size=128KB
-spring.servlet.multipart.max-request-size=128KB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
